--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
-<article>
-  <img src="img/hand1.png" />
+<article class="flash">
+  <img
+    class="x-ray"
+    src="https://raw.githubusercontent.com/sanqit/x-ray-mask/main/img/hand2.png"
+  />
 </article>
